src/objects/BGCK__Checklist_Version__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__BG_Checklist_Name__c</fullName>
        <label>Checklist Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__BG_Checklist_Title__c</fullName>
        <description>The title that users will see when filling out checklists with this version. Will be a link back to the parent record. Supports merge fields on the parent object.</description>
        <inlineHelpText>The title that users will see when filling out checklists with this version. Will be a link back to the parent record. Supports merge fields on the parent object.</inlineHelpText>
        <label>Checklist Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__BG_Field_Set_Name__c</fullName>
        <inlineHelpText>The API name of a field set on Page Question object, used to control the fields shown when editing page question eligibility.</inlineHelpText>
        <label>Field Set Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>BGCK__Checklist__c</referenceTo>
        <relationshipLabel>Checklist Versions</relationshipLabel>
        <relationshipName>Checklist_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page</label>
        <referenceTo>BGCK__Page__c</referenceTo>
        <relationshipLabel>Checklist Versions</relationshipLabel>
        <relationshipName>Checklist_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Checklist Versions</relationshipLabel>
        <relationshipName>Checklist_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCK__Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Checklist Version</label>
    <nameField>
        <displayFormat>CV{000000}</displayFormat>
        <label>Checklist Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>